# reason

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
examples/: config.toml  history.txt  linux_config.toml  macos_config.toml  metadata.yaml
man/: cd.md  command.md  config.md  curl.md  ed.md  exit.md  filter.md  ls.md  man.md  open.md  paper.md  printf.md  pwd.md  rm.md  set.md  touch.md  wc.md
src/: app.rs  config.rs  error.rs  filter.rs  main.rs  paper.rs  utils.rs
src/cmd/: cd.rs  curl.rs  ed.rs  exit.rs  ls.rs  man.rs  mod.rs  open.rs  prelude.rs  printf.rs  pwd.rs  read.rs  rm.rs  set.rs  touch.rs  wc.rs
src/paper/: filter.rs  mod.rs
src/state/: filter.rs  mod.rs  paper.rs
