[package]
name = "reason"
version = "0.1.0"
authors = ["Jae-Won Chung <jwnchung@umich.edu>"]
edition = "2018"

[dependencies]
rustyline = "8.2"
rustyline-derive = "0.4"
chrono = "0.4"
regex = "1.5"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1"
confy = "0.4"
directories-next = "^2.0"
home = "0.5.3"
comfy-table = "4.0.1"
