[package]
name = "reason-shell"
description = "Reason: A Shell for Research Papers"
authors = ["Jae-Won Chung <jwnchung@umich.edu>"]
license = "MIT"
repository = "https://github.com/jaywonchung/reason"
edition = "2018"
version = "0.3.3"

[[bin]]
name = "reason"
path = "src/main.rs"

[dependencies]
rustyline = "8.2"
rustyline-derive = "0.4"
regex = "1.5"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1"
confy = "0.4"
directories-next = "^2.0"
home = "0.5.3"
comfy-table = "4.0.1"
ansi_term = "0.12.1"
reqwest = { version = "0.11.4", features = ["blocking"] }
soup = "0.5.1"
url = "2.2.2"
mdbook = "0.4.12"
pdf = "0.7.2"
tempfile = "3.2.0"
